--- a/server.properties
+++ b/server.properties
@@ -7,7 +7,7 @@ broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 bug-report-link=
 debug=false
-difficulty=easy
+difficulty=hard
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -53,12 +53,12 @@ resource-pack-prompt=
 resource-pack-sha1=
 server-ip=
 server-port=25565
-simulation-distance=10
+simulation-distance=12
 spawn-monsters=true
-spawn-protection=16
+spawn-protection=0
 sync-chunk-writes=true
 text-filtering-config=
 text-filtering-version=0
 use-native-transport=true
-view-distance=10
+view-distance=12
 white-list=false
